--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="/css/style.css">
-    <script src="/js/style.js"></script>
+    <link rel="stylesheet" href="./css/style.css">
+    <script src="./js/style.js"></script>
 </head>
 <body>
     <h1><a href="index.html">WEB</a></h1>
