[Modify]  - Modified code

--- a/test.html
+++ b/test.html
@@ -28,6 +28,7 @@
       max-width: 600px;
       /* margin-top = header height */
       margin-top: 60px;
+      margin: 0 auto;
     }
 
     /* Navigation bar */
@@ -85,16 +86,16 @@
     }
     /* aside navigation */
 
-    aside {
+    /*aside {
       /* for fixed side bar */
-      position: fixed;
+      /*position: fixed;
       top: 60px;
       bottom: 0;
-      width: 200px;  /* 너비 고정 */
-      padding-top: 25px;
+      width: 200px;*/  /* 너비 고정 */
+      /*padding-top: 25px;
       background-color: #333;
-    }
-    aside > ul {
+    }*/
+    /*aside > ul {
       width: 200px;
     }
     aside > ul > li > a {
@@ -111,11 +112,12 @@
     aside > h1 {
       padding: 20px 0 20px 20px;
       color: #fff;
-    }
+    }*/
     /* Section */
     section {
-        margin-left: 200px;
-        float: right;
+        margin: 0 auto;
+      float: right;
+      width: 600px;
       /* aside width */
     }
     article {
@@ -153,7 +155,7 @@
     </header>
 
     <div id="content-wrap">
-      <aside>
+      <!-- <aside>
         <h1>Aside</h1>
         <ul>
           <li><a href="#" class="active">London</a></li>
@@ -161,7 +163,7 @@
           <li><a href="#">Tokyo</a></li>
           <li><a href="#">Newyork</a></li>
         </ul>
-      </aside>
+      </aside> -->
       <section>
         <article id="london">
           <h1>London</h1>
