--- a/new-index.html
+++ b/new-index.html
@@ -10,23 +10,13 @@
 </head>
 <body>
     <header>
-        <div class="header-current-time">
-            <h3>09:21</h3>
-        </div>
-        <div class="header-image">
-            <img src=""alt="headerImage">
-            <img src="" alt="headerImage">
-            <img src="" alt="headerImage">
-        </div>
-    </header>
-    <nav>
-        <div class="navbar-menu-select">
+        <div class="header-menu-select">
             <img src="" alt="menuSelectImage">
         </div>
-        <div class="navbar-menu-logo">
+        <div class="header-menu-logo">
             <img src="" alt="menuLogoImage">
         </div>
-    </nav>
+    </header>
     <main>
         <div class="contents">
             <div class="first-contents">
