--- a/new-index.html
+++ b/new-index.html
@@ -20,11 +20,13 @@
     </script>
 
     <header>
-        <div class="header-menu-select">
-            <span>&#9776;</span>
-        </div>
-        <div class="header-menu-logo">
-            <a href="#"><img src="./resources/img/free-logo.png" alt="menuLogoImage"></a>
+        <div class="header-bar-ui">
+            <div class="header-menu-select">
+                <span>&#9776;</span>
+            </div>
+            <div class="header-menu-logo">
+                <a href="#"><img src="./resources/img/free-logo.png" alt="menuLogoImage"></a>
+            </div>
         </div>
     </header>
     <main>
