[Feature] - Move header-bar-ui class tags to the `header` tags

--- a/new-index.html
+++ b/new-index.html
@@ -19,15 +19,15 @@
         })();
     </script>
 
-    <header>
-        <div class="header-bar-ui">
+    <header class="header-bar-ui">
+        <!-- <div class="header-bar-ui"> -->
             <div class="header-menu-select">
                 <span>&#9776;</span>
             </div>
             <div class="header-menu-logo">
                 <a href="#"><img src="./resources/img/free-logo.png" alt="menuLogoImage"></a>
             </div>
-        </div>
+        <!-- </div> -->
     </header>
     <main>
         <div class="contents">
