--- a/new-index.html
+++ b/new-index.html
@@ -13,21 +13,19 @@
         // scroll : header style change
         (function () {
             window.addEventListener('scroll', function(){
-                const isHeaderOn = document.querySelector('.s-header');
+                const isHeaderOn = document.querySelector('.header-bar-ui');
                 document.documentElement.scrollTop > 50 ?  isHeaderOn.classList.add('on') : isHeaderOn.classList.remove('on')
             });
         })();
     </script>
 
     <header class="header-bar-ui">
-        <!-- <div class="header-bar-ui"> -->
-            <div class="header-menu-select">
-                <span>&#9776;</span>
-            </div>
-            <div class="header-menu-logo">
-                <a href="#"><img src="./resources/img/free-logo.png" alt="menuLogoImage"></a>
-            </div>
-        <!-- </div> -->
+        <div class="header-menu-select">
+            <span>&#9776;</span>
+        </div>
+        <div class="header-menu-logo">
+            <a href="#"><img src="./resources/img/free-logo.png" alt="menuLogoImage"></a>
+        </div>
     </header>
     <main>
         <div class="contents">
