[Update] - Updated Header UI

--- a/new-index.html
+++ b/new-index.html
@@ -24,7 +24,9 @@
             <span>&#9776;</span>
         </div>
         <div class="header-menu-logo">
-            <a href="#"><img src="./resources/img/free-logo.png" alt="menuLogoImage"></a>
+            <div class="header-menu-logo-inner">
+                <a href="#"><img src="./resources/img/free-logo.png" alt="menuLogoImage"></a>
+            </div>
         </div>
     </header>
     <main>
