--- a/test-ui.html
+++ b/test-ui.html
@@ -14,13 +14,13 @@
                 font-size: 24px;
                 text-align: center;
             }
-            nav {
+            header {
                 position: -webkit-sticky;
                 position: sticky;
                 top: 0;
                 background-color: yellow;
             }
-            nav:after {
+            header:after {
                 background-color: blue;
             }
             
