--- a/new-index.html
+++ b/new-index.html
@@ -23,11 +23,15 @@
         <div class="header-menu-select">
             <span>&#9776;</span>
         </div>
+        
         <div class="header-menu-logo">
             <div class="header-menu-logo-inner">
                 <a href="#"><img src="./resources/img/free-logo.png" alt="menuLogoImage"></a>
             </div>
         </div>
+        <h1 class="header-title">
+            Title
+        </h1>
     </header>
     <main>
         <div class="contents">
