--- a/testtest.html
+++ b/testtest.html
@@ -15,7 +15,7 @@
       <a class="new-logo"><img src="https://poiemaweb.com/img/logo.png" alt=""></a>
       <h1 class="header-title">Title</h1>
       
-      <!-- <nav>
+      <nav>
         <input class="nav-toggle" id="nav-toggle" type="checkbox">
         <label class="navicon" for="nav-toggle"><span class="navicon-bar"></span></label>
         <ul class="nav-items">
@@ -24,7 +24,7 @@
           <li><a href="#contact">Contact</a></li>
           <li><a href="#about">About</a></li>
         </ul>
-      </nav> -->
+      </nav>
     </header>
 
     <div id="content-wrap">
