[Feature] - Resizing Header Image

--- a/header-ui.html
+++ b/header-ui.html
@@ -13,7 +13,7 @@
         <div class="inner-wrap">
             <header class="layout-header">
                 <div class="layout-header-logo">
-                    <img src="./resources/img/free-logo.png" alt="headerLogo" class="layout-header-logo-size">
+                    <img src="./resources/img/free-logo.png" alt="headerLogo" class="layout-header-logo-img">
                 </div>
                 <h1 class="layout-header-title">Title</h1>
                 <div class="layout-header-gnb-selector">
