[Feature] - Align images

--- a/header-ui.html
+++ b/header-ui.html
@@ -13,11 +13,11 @@
         <div class="inner-wrap">
             <header class="layout-header">
                 <div class="layout-header-logo">
-                    <img src="./resources/img/free-logo.png" alt="headerLogo" class="layout-header-logo-img">
+                    <img src="./resources/img/free-logo.png" alt="headerLogo">
                 </div>
                 <h1 class="layout-header-title">Title</h1>
                 <div class="layout-header-gnb-selector">
-                    <div class="layout-header-inner-selector">
+                    <div>
                         <img src="./resources/img/menu-icon.svg.png" alt="innerSelector">
                     </div>
                 </div>
