--- a/header-ui.html
+++ b/header-ui.html
@@ -13,12 +13,12 @@
         <div class="inner-wrap">
             <header class="layout-header">
                 <div class="layout-header-logo">
-                    <img src="./resources/img/free-logo.png" alt="headerLogo">
+                    <a href="#"><img src="./resources/img/free-logo.png" alt="headerLogo"></a>
                 </div>
                 <h1 class="layout-header-title">Title</h1>
                 <div class="layout-header-gnb-selector">
                     <div>
-                        <img src="./resources/img/menu-icon.svg.png" alt="innerSelector">
+                        <a href="#"><img src="./resources/img/menu-icon.svg.png" class="gnb-selector-toggle" alt="innerSelector"></a>
                     </div>
                 </div>
                 <!-- <div class="layout-header-menu-selector">
