[Update] - Changed position

--- a/header-ui.html
+++ b/header-ui.html
@@ -18,17 +18,17 @@
                 <h1 class="layout-header-title">Title</h1>
                 <div class="layout-header-gnb-selector">
                     <div>
-                        <a href="#"><img src="./resources/img/menu-icon.svg.png" class="gnb-selector-toggle" alt="innerSelector"></a>
+                        <a href="#" class="gnb-selector-toggle"><img src="./resources/img/menu-icon.svg.png" alt="innerSelector"></a>
                     </div>
                 </div>
-                <!-- <div class="layout-header-menu-selector">
+                <div class="layout-header-menu-selector">
                     <ul>
                         <li class="layout-header-menu">Menu1</li>
                         <li class="layout-header-menu">Menu2</li>
                         <li class="layout-header-menu">Menu3</li>
                         <li class="layout-header-menu">Menu4</li>
                     </ul>
-                </div> -->
+                </div>
             </header>
             <main class="layout-main">
                 <div class="layout-main-top-menu"></div>
