[Update] - Change ul*li tags to a*img tags

--- a/header-ui.html
+++ b/header-ui.html
@@ -22,12 +22,10 @@
                     </div>
                 </div>
                 <div class="layout-header-menu-selector">
-                    <ul>
-                        <li class="layout-header-menu">Menu1</li>
-                        <li class="layout-header-menu">Menu2</li>
-                        <li class="layout-header-menu">Menu3</li>
-                        <li class="layout-header-menu">Menu4</li>
-                    </ul>
+                    <a href="#" class="layout-header-menu"><img src="" alt="headerMenu"></a>
+                    <a href="#" class="layout-header-menu"><img src="" alt="headerMenu"></a>
+                    <a href="#" class="layout-header-menu"><img src="" alt="headerMenu"></a>
+                    <a href="#" class="layout-header-menu"><img src="" alt="headerMenu"></a>
                 </div>
             </header>
             <main class="layout-main">
