[Feature] - Add new images

--- a/header-ui.html
+++ b/header-ui.html
@@ -22,10 +22,18 @@
                     </div>
                 </div>
                 <div class="layout-header-menu-selector">
-                    <a href="#" class="layout-header-menu"><img src="" alt="headerMenu"></a>
-                    <a href="#" class="layout-header-menu"><img src="" alt="headerMenu"></a>
-                    <a href="#" class="layout-header-menu"><img src="" alt="headerMenu"></a>
-                    <a href="#" class="layout-header-menu"><img src="" alt="headerMenu"></a>
+                    <div class="layout-design-guide-handler">
+                        <a href="#" class="layout-header-menu"><img src="./resources/img/close-image.png" alt="headerMenu"></a>
+                        <a href="#" class="layout-header-menu"><img src="./resources/img/close-image.png" alt="headerMenu"></a>
+                        <a href="#" class="layout-header-menu"><img src="./resources/img/close-image.png" alt="headerMenu"></a>
+                        <a href="#" class="layout-header-menu"><img src="./resources/img/close-image.png" alt="headerMenu"></a>
+                    </div>
+                    <div class="layout-design-guide-user">
+                        <a href="#" class="user-toggle">
+                            <!-- <img src="./resources/img/user.png" alt="userProfile"> -->
+                            <span class="user-image" style="background-image: url('./resources/img/user.png');">User</span>
+                        </a>
+                    </div>
                 </div>
             </header>
             <main class="layout-main">
