[Feature] - Successfully finished tool bar

--- a/header-ui.html
+++ b/header-ui.html
@@ -23,15 +23,15 @@
                 </div>
                 <div class="layout-header-menu-selector">
                     <div class="layout-design-guide-handler">
-                        <a href="#" class="layout-header-menu"><img src="./resources/img/close-image.png" alt="headerMenu"></a>
-                        <a href="#" class="layout-header-menu"><img src="./resources/img/close-image.png" alt="headerMenu"></a>
-                        <a href="#" class="layout-header-menu"><img src="./resources/img/close-image.png" alt="headerMenu"></a>
-                        <a href="#" class="layout-header-menu"><img src="./resources/img/close-image.png" alt="headerMenu"></a>
+                        <a href="#" class="layout-header-menu-text">삭제</a>
+                        <a href="#" class="layout-header-menu-icon"><img src="./resources/img/close-image.png" alt="headerMenu"></a>
+                        <a href="#" class="layout-header-menu-icon"><img src="./resources/img/close-image.png" alt="headerMenu"></a>
+                        <a href="#" class="layout-header-menu-icon"><img src="./resources/img/close-image.png" alt="headerMenu"></a>
                     </div>
                     <div class="layout-design-guide-user">
                         <a href="#" class="user-toggle">
                             <!-- <img src="./resources/img/user.png" alt="userProfile"> -->
-                            <span class="user-image" style="background-image: url('./resources/img/user.png');">User</span>
+                            <span class="user-image" style="background-image: url('./resources/img/user.svg');">User</span>
                         </a>
                     </div>
                 </div>
