[Feature] - Layout Header

--- a/header-ui.html
+++ b/header-ui.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 
     <link rel="stylesheet" href="./css/header-ui.css">
+    <script src="./js/style.js" type="text/javascript"></script>
 </head>
 <body>
     <div id="wrap">
