--- a/header-ui.html
+++ b/header-ui.html
@@ -7,7 +7,16 @@
     <title>Document</title>
 
     <link rel="stylesheet" href="./css/header-ui.css">
+    <script src="http://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="./js/style.js" type="text/javascript"></script>
+    <script>
+        
+    </script>
+    <!-- <script>
+        document.querySelector('gnb-selector-toggle').addEventListener('click', function(){
+            document.querySelector('layout-header-gnb-area').classList.add('state-click')
+        });
+    </script> -->
 </head>
 <body>
     <div id="wrap">
@@ -19,7 +28,7 @@
                 <h1 class="layout-header-title">Title</h1>
                 <div class="layout-header-gnb-selector">
                     <div>
-                        <a href="#" class="gnb-selector-toggle"><img src="./resources/img/menu-icon.svg.png" alt="innerSelector"></a>
+                        <a href="#" class="gnb-selector-toggle gnb-btn-icon" onclick="myFunction()"><img src="./resources/img/menu-icon.svg.png" alt="innerSelector"></a>
                     </div>
                 </div>
                 <div class="layout-header-menu-selector">
@@ -36,22 +45,39 @@
                         </a>
                     </div>
                 </div>
+                <div class="layout-header-gnb-area" style="background: #000; display: none;">
+                    <div class="layout-gnb-header">
+                        <button onclick="myFunction()"><img src="./resources/img/close-image.png" alt="closeImage"></button>
+                    </div>
+                    <div class="layout-gnb-body">
+                        <nav class="layout-gnb-nav"></nav>
+                    </div>
+                    <div class="layout-gnb-footer">
+                        <a href="#" class="btn-logout"><img src="./resources/img/logout.svg" alt="stateLogout"></a>
+                    </div>
+                </div>
             </header>
             <main class="layout-main">
-                <div class="layout-main-top-menu"></div>
                 <div class="layout-main-menu-selector">
-                    <ul>
-                        <li class="layout-main-menu"></li>
-                        <li class="layout-main-menu"></li>
-                        <li class="layout-main-menu"></li>
-                        <li class="layout-main-menu"></li>
-                        <li class="layout-main-menu"></li>
-                        <li class="layout-main-menu"></li>
-                        <li class="layout-main-menu"></li>
-                        <li class="layout-main-menu"></li>
-                        <li class="layout-main-menu"></li>
-                        <li class="layout-main-menu"></li>
-                    </ul>
+                    <div class="layout-main-guide">
+                        <div class="layout-main-nav-guide">
+                            <nav class="menu-topbar-tabs">
+                                <a href="#" calss="selected">Nav 1</a>
+                                <a href="#">Nav 2</a>
+                                <a href="#">Nav 3</a>
+                            </nav>
+                        </div>
+                        <div class="layout-guide-container"></div>
+                        <div class="layout-guide-container"></div>
+                        <div class="layout-guide-container"></div>
+                        <div class="layout-guide-container"></div>
+                        <div class="layout-guide-container"></div>
+                        <div class="layout-guide-container"></div>
+                        <div class="layout-guide-container"></div>
+                        <div class="layout-guide-container"></div>
+                        <div class="layout-guide-container"></div>
+                        <div class="layout-guide-container"></div>
+                    </div>
                 </div>
             </main>
             <footer class="layout-footer">
