[Update] - Delete unnecessary codes

--- a/header-ui.html
+++ b/header-ui.html
@@ -47,7 +47,7 @@
                 </div>
                 <div class="layout-header-gnb-area" style="background: #000; display: none;">
                     <div class="layout-gnb-header">
-                        <button onclick="myFunction()"><img src="./resources/img/close-image.png" alt="closeImage"></button>
+                        <button><img src="./resources/img/close-image.png" alt="closeImage"></button>
                     </div>
                     <div class="layout-gnb-body">
                         <nav class="layout-gnb-nav"></nav>
