[Feature] - layout-guide-container

--- a/header-ui.html
+++ b/header-ui.html
@@ -28,7 +28,7 @@
                 <h1 class="layout-header-title">Title</h1>
                 <div class="layout-header-gnb-selector">
                     <div>
-                        <a href="#" class="gnb-selector-toggle gnb-btn-icon" onclick="myFunction()"><img src="./resources/img/menu-icon.svg.png" alt="innerSelector"></a>
+                        <a class="gnb-selector-toggle gnb-btn-icon" onclick="GNBClick()"><img src="./resources/img/menu-icon.svg.png" alt="innerSelector"></a>
                     </div>
                 </div>
                 <div class="layout-header-menu-selector">
@@ -45,9 +45,9 @@
                         </a>
                     </div>
                 </div>
-                <div class="layout-header-gnb-area" style="background: #000; display: none;">
+                <div class="layout-header-gnb-area" style="display: none">
                     <div class="layout-gnb-header">
-                        <button><img src="./resources/img/close-image.png" alt="closeImage"></button>
+                        <button class=""><img src="./resources/img/close-image.png" alt="closeImage"></button>
                     </div>
                     <div class="layout-gnb-body">
                         <nav class="layout-gnb-nav"></nav>
@@ -62,21 +62,21 @@
                     <div class="layout-main-guide">
                         <div class="layout-main-nav-guide">
                             <nav class="menu-topbar-tabs">
-                                <a href="#" calss="selected">Nav 1</a>
+                                <a href="#" class="selected">Nav 1</a>
                                 <a href="#">Nav 2</a>
                                 <a href="#">Nav 3</a>
                             </nav>
                         </div>
-                        <div class="layout-guide-container"></div>
-                        <div class="layout-guide-container"></div>
-                        <div class="layout-guide-container"></div>
-                        <div class="layout-guide-container"></div>
-                        <div class="layout-guide-container"></div>
-                        <div class="layout-guide-container"></div>
-                        <div class="layout-guide-container"></div>
-                        <div class="layout-guide-container"></div>
-                        <div class="layout-guide-container"></div>
-                        <div class="layout-guide-container"></div>
+                        <div class="layout-guide-container">1</div>
+                        <div class="layout-guide-container">2</div>
+                        <div class="layout-guide-container">3</div>
+                        <div class="layout-guide-container">4</div>
+                        <div class="layout-guide-container">5</div>
+                        <div class="layout-guide-container">6</div>
+                        <div class="layout-guide-container">7</div>
+                        <div class="layout-guide-container">8</div>
+                        <div class="layout-guide-container">9</div>
+                        <div class="layout-guide-container">10</div>
                     </div>
                 </div>
             </main>
