[Update] - Update Text Design

--- a/test-navigation.html
+++ b/test-navigation.html
@@ -56,13 +56,16 @@
                                 <div class="wrap">
                                     <ul class="nav-grid" id="list">
                                         <li class="nav-grid-items text-center active">
-                                            <span class="lnr lnr-home icon"></span>
+                                            <!-- <span class="lnr lnr-home icon"></span> -->
+                                            <a class="icon">Nav 1</a>
                                         </li>
                                         <li class="nav-grid-items text-center">
-                                            <span class="lnr lnr-sun icon"></span>
+                                            <a class="icon">Nav 2</a>
+                                            <!-- <span class="lnr lnr-sun icon"></span> -->
                                         </li>
                                         <li class="nav-grid-items text-center">
-                                            <span class="lnr lnr-bubble icon"></span>
+                                            <a class="icon">Nav 3</a>
+                                            <!-- <span class="lnr lnr-bubble icon"></span> -->
                                         </li>
                                         <li class="active-grid-circle">
                                             <div id="active-nav-grid-item" class="nav-circle grid-item-active"></div>
