[Feaeture] - Swipper Example

--- a/SwipperExample.html
+++ b/SwipperExample.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.0.7/css/swiper.min.css">
+    <link rel="stylesheet" href="./css/SwipperExample.css">
 </head>
 <body>
     <div class="swiper-container">
@@ -17,5 +18,9 @@
         </div>
         <div class="swiper-pagination"></div>
     </div>
+
+    <!-- <script src="https://cpwebassets.codepen.io/assets/common/stopExecutionOnTimeout-1b93190375e9ccc259df3a57c1abc0e64599724ae30d7ea4c6877eb615f89387.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.0.7/js/swiper.min.js"></script>
+    <script src="./js/SwipperExample.js"></script>
 </body>
 </html>
