[Feature]  - Swipper Example.css

--- a/SwipperExample.html
+++ b/SwipperExample.html
@@ -17,7 +17,12 @@
             <div class="swiper-slide">Slide 3</div>
         </div>
         <div class="swiper-pagination"></div>
+
     </div>
+
+    <!-- <div class="swiper-container"> -->
+        <!-- <div class="swiper-pagination"></div> -->
+    <!-- </div> -->
 
     <!-- <script src="https://cpwebassets.codepen.io/assets/common/stopExecutionOnTimeout-1b93190375e9ccc259df3a57c1abc0e64599724ae30d7ea4c6877eb615f89387.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.0.7/js/swiper.min.js"></script>
