--- a/SwipperExample.html
+++ b/SwipperExample.html
@@ -13,7 +13,7 @@
     <div class="swiper-container">
         <div class="swiper-wrapper">
             <div class="swiper-slide">Slide 1</div>
-            <div class="swiper-slide">Slide 2</div>
+            <div class="swiper-slide second-slide">Slide 2</div>
             <div class="swiper-slide">Slide 3</div>
             
         </div>
