[Update] - Divide Original version and New-version

--- a/SwipperExample.html
+++ b/SwipperExample.html
@@ -17,11 +17,15 @@
             <div class="swiper-slide">Slide 3</div>
             
         </div>
-        <div class="swiper-pagination"></div>
+        <!-- Dynamic Location (After Merged new-master into Master) -->
+        <!-- <div class="swiper-pagination"></div>
         <div class="swiper-button-next"></div>
-        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-prev"></div> -->
     </div>
-   
+    <!-- Static Location (Before Merge new-master into Master) -->
+    <div class="swiper-pagination"></div>
+    <div class="swiper-button-next"></div>
+    <div class="swiper-button-prev"></div>
 
 
     <!-- <div class="swiper-container"> -->
