[Feature] - Border Bottom of Screen-List li part

--- a/DividerLine.html
+++ b/DividerLine.html
@@ -12,10 +12,10 @@
     <main class="screen-main">
         <div class="screen-list">
             <ul>
-                <li>Item 1</li>
-                <li>Item 2</li>
-                <li>Item 3</li>
-                <li class="last-child">Item 4</li>
+                <li class="line-info">Item 1</li>
+                <li class="line-info">Item 2</li>
+                <li class="line-info">Item 3</li>
+                <li class="last-child line-info">Item 4</li>
             </ul>
         </div>
     </main>
