--- a/New-Tabbar-Example.html
+++ b/New-Tabbar-Example.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=5, initial-scale=1.0">
     <title>Document</title>
 
-    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="./css/New-Tabbar-Example.css">
+    <script src="./js/New-Tabbar-Example.js"></script>
 </head>
 <body>
 
@@ -21,7 +23,6 @@
         </div>
       </div>
 
-      <link rel="stylesheet" href="./css/New-Tabbar-Example.css">
-      <script src="./js/New-Tabbar-Example.js"></script>
+
 </body>
 </html>
