--- a/CheckPasswordValidation.html
+++ b/CheckPasswordValidation.html
@@ -3,7 +3,7 @@
     <meta http-equiv="content-type" content="text/html" />
     <meta name="author" content="lolkittens" />
     <script charset="utf-8" type="text/javascript">
-        function check(Form_Name, ID_Name)
+        function check(ID_Name)
         {
             alert(document.getElementById(ID_Name).value);
         }
@@ -14,12 +14,12 @@
 <body>
 
     <div id="main" style="width: 300px; height: 200px;">
-        <form name="MainForm" id="MainForm">
+        <!-- <form name="MainForm" id="MainForm"> -->
             <input id="ID" name="ID" type="text" size="20"/>
             <input id="Pass" name="Pass" type="password" size="20"/>
-        </form>
-        <button value="click Me" onclick="check('MainForm','ID')"> Click Me for ID </button>
-        <button value="click Me" onclick="check('Pass','Pass')"> Click Me for Password</button>
+        <!-- </form> -->
+        <button value="click Me" onclick="check('ID')"> Click Me for ID </button>
+        <button value="click Me" onclick="check('Pass')"> Click Me for Password</button>
     </div>
 </body>
 </html>
