[Update] - Updtaed VModelToVANILLAJS.html

--- a/VmodelToVanillajs.html
+++ b/VmodelToVanillajs.html
@@ -8,11 +8,7 @@
   <body>
     <div id="app-vanilla"></div>
     <p id="name"></p>
-    <input
-      type="text"
-      class="inputText"
-      oninput="inputP.innerHTML = inputValue.value"
-    />
+    <input type="text" class="inputText" oninput="inputP.innerHTML = inputValue.value"/>
     <p id="inputText"></p>
 
     <script>
