[Update] - Updated codes

--- a/AutoCompleteExample.html
+++ b/AutoCompleteExample.html
@@ -14,30 +14,30 @@
     <div class="layout-general">
         <h1>아무거나 입력하세요.</h1>
         <div class="flex--input">
-            <input type="text" class="inner-grid-input" list="menu-list" onclick="toggleIcon('.inner-grid-input', '.menu-info')" onkeyup="getValue()">
+            <input type="text" id="check-value" class="inner-grid-input" list="menu-list" onclick="toggleIcon('.inner-grid-input', '.menu-info')">
         </div>
         <ul style="display: none;" class="menu-info">
-            <li class="search-selected">
+            <li class="check search-selected">
                 <p class="state-title">하노이 (HAN - 노이바이 국제공항)</p>
                 <span class="container-color-1">베트남</span>
             </li>
-            <li>
+            <li class="check">
                 <p class="state-title">다낭 (DAD - 다낭 국제공항)</p>
                 <span class="container-color-1">베트남</span>
             </li>
-            <li>
+            <li class="check">
                 <p class="state-title">푸꾸옥 (PQC - 푸꾸욱 국제공항)</p>
                 <span class="container-color-1">베트남</span>
             </li>
-            <li>
+            <li class="check">
                 <p class="state-title">다랏 (DLI - 리엔 쿠엉)</p>
                 <span class="container-color-1">베트남</span>
             </li>
-            <li>
+            <li class="check">
                 <p class="state-title">후에 (HUI - 푸바이 국제공항)</p>
                 <span class="container-color-1">베트남</span>
             </li>
-            <li>
+            <li class="check">
                 <p class="state-title">하이퐁 (HPH - 캇비 국제공항)</p>
                 <span class="container-color-1">베트남</span>
             </li>
